experiments/workload-variant-autoscaler/10-llm-d-upstream/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: experiment-01
  labels:
    openshift.io/cluster-monitoring: "true"
