experiments/workload-variant-autoscaler/10-llm-d-upstream/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inference-gateway
  namespace: openshift-ingress
spec:
  host: inference-gateway.apps.SET_ME_DOMAIN_HERE
  to:
    kind: Service
    name: openshift-ai-inference-istio
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
